--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,17 @@
             <artifactId>commons-lang</artifactId>
             <version>${commons-lang.wso2.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.utils</artifactId>
+            <version>${carbon.kernel.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.governance</groupId>
+            <artifactId>org.wso2.carbon.identity.governance</artifactId>
+            <version>1.4.72</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -151,6 +162,12 @@
                             org.osgi.framework; version="${osgi.framework.imp.pkg.version.range}",
                             org.osgi.service.component.*;version="${osgi.service.component.imp.pkg.version.range}",
                             org.osgi.service.http; version="${osgi.service.http.imp.pkg.version.range}",
+
+                            org.wso2.carbon.base.*; version="${carbon.kernel.package.import.version.range}",
+                            org.wso2.carbon.identity.application.common.model;
+                            version="${carbon.identity.framework.imp.pkg.version.range}",
+                            org.wso2.carbon.identity.governance.*;
+                            version="${identity.governance.imp.pkg.version.range}",
                         </Import-Package>
                     </instructions>
                 </configuration>
@@ -189,5 +206,10 @@
         <commons.io.wso2.osgi.version.range>[2.4.0,3.0.0)</commons.io.wso2.osgi.version.range>
         <httpcore.version>4.3.3.wso2v1</httpcore.version>
         <httpcore.osgi.version.range>[4.3.3, 5.0.0)</httpcore.osgi.version.range>
+        <identity.governance.imp.pkg.version.range>[1.3.0, 2.0.0)</identity.governance.imp.pkg.version.range>
+        <carbon.kernel.version>4.6.1</carbon.kernel.version>
+        <carbon.kernel.package.import.version.range>[4.5.0, 5.0.0)</carbon.kernel.package.import.version.range>
+        <carbon.identity.framework.imp.pkg.version.range>[5.15.28, 6.0.0)
+        </carbon.identity.framework.imp.pkg.version.range>
     </properties>
 </project>
